feat: add metastore full-text search UI
